--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>FCC ISQA Project - Personal Library</title>
-    <meta name="description" content="A cool thing made with HyperDev">
-    <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
+    <title>FCC QA Project - Personal Library</title>
+    <meta name="description" content="Personal Library Project">
+    <link id="favicon" rel="icon" href="" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,15 +11,13 @@
   <body>
     <header>
       <h1>
-        <b>ISQA Project</b> - Personal Library
+        <b>QA Project</b> - Personal Library
       </h1>
+      <hr style='margin: 50px'>
     </header>
-    <br>
     <div id="userstories">
       <h2>User stories:</h2>
       <ol>
-        <li>Nothing from my website will be cached in my client as a security measure.</li>
-        <li>I will see that the site is powered by 'PHP 4.2.0' even though it isn't as a security measure.</li>
         <li>I can <b>post</b> a <code>title</code> to /api/books to add a book and returned will be the object with the <code>title</code> and a unique <code>_id</code>.</li>
         <li>I can <b>get</b> /api/books to retrieve an aray of all books containing <code>title</code>, <code>_id</code>, & <code>commentcount</code>.</li>
         <li>I can <b>get</b> /api/books/{_id} to retrieve a single object of a book containing <code>title</code>, <code>_id</code>, & an array of <code>comments</code> (empty array if no comments present).</li>
@@ -32,7 +30,7 @@
       <br>
       <img src='https://cdn.gomix.com/d7932c52-287f-4dae-b175-631fef453000%2FScreen%20Shot%202016-12-16%20at%201.35.56%20AM.png' />
     </div>
-    <hr style='margin: 50px'>
+    <hr>
     <div id ='sampleposting'>
       <h2 style="text-align: left">Test API responses:</h2>
       <form action="/api/books" method="post" class="border">
